--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -596,6 +596,10 @@ body{
     margin-bottom: .5em;
   }
   .total-confirm-modal{
+    .scholar-checkbox{
+      display:inline-block;
+      margin-right:20px;
+    }
     h6{
       display:inline-block;
     }
